--- a/src/css/index.css
+++ b/src/css/index.css
@@ -18,11 +18,11 @@ nav {
 
 
 .search {
-    @apply text-sm md:text-base min-w-[300px] bg-white shadow rounded flex items-center  px-6 gap-3 focus-within:ring-2 focus-within:ring-black dark:bg-darkElement dark:text-white dark:focus-within:ring-white hover:ring-2 dark:hover:ring-white
+    @apply text-sm md:text-base min-w-full sm:min-w-[375px] bg-white shadow rounded flex items-center  px-6 gap-3 focus-within:ring-2 focus-within:ring-black dark:bg-darkElement dark:text-white dark:focus-within:ring-white hover:ring-2 dark:hover:ring-white
     hover:ring-black
 }
 
 .search input {
-    @apply w-full py-2.5 focus:outline-none text-lightInput dark:text-white bg-inherit
+    @apply py-2.5 w-full md:min-w-[375px] focus:outline-none text-lightInput dark:text-white bg-inherit
 }
 
